--- a/package.json
+++ b/package.json
@@ -12,11 +12,24 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
+    "next-mdx-remote": "^4.2.0",
+    "next-themes": "^0.2.1",
+    "nextjs-progressbar": "^0.0.16",
+    "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-simple-typewriter": "^5.0.1",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@types/qs": "^6.9.7",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
